--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.15.2",
     "mustache-express": "^1.2.4",
     "pg-promise": "^5.6.3",
+    "pryjs": "^1.0.3",
     "watson-developer-cloud": "^2.25.1"
   }
 }
