--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
   "author": "Anthony",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.17.1",
-    "express": "^4.15.2",
+    "bcrypt": "^1.0.2",
+    "body-parser": "^1.16.1",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
+    "dotenv": "^4.0.0",
+    "express": "^4.14.1",
+    "express-session": "^1.15.1",
+    "morgan": "^1.8.1",
     "mustache-express": "^1.2.4",
-    "pg-promise": "^5.6.3",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "pg-promise": "^5.6.2",
     "pryjs": "^1.0.3",
     "watson-developer-cloud": "^2.25.1"
   }
